--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "format:assets": "npx prettier --write '**/*.{js,css}'",
     "format:php": "vendor/bin/php-cs-fixer fix --config config/phpcsfixer.config.php --allow-risky=yes",
     "version:prepare": "pnpm changeset version && pnpm version:patch",
-    "version:patch": "node config/scripts/patchVersion.js $(basename \"$(pwd)\").php readme.txt",
+    "version:patch": "node config/scripts/patchVersion.js $(basename \"$(pwd)\").php readme.txt composer.json",
     "wp-env": "wp-env"
   },
   "devDependencies": {
