Optimize the script that generates the `.distignore` file
- use node instead of bash
- print warning messages to prevent manual editing

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "format:php": "vendor/bin/php-cs-fixer fix --config config/phpcsfixer.config.php --allow-risky=yes",
     "version:prepare": "pnpm changeset version && pnpm version:patch",
     "version:patch": "node config/scripts/patchVersion.js $(basename \"$(pwd)\").php readme.txt composer.json",
+    "distignore:generate": "node config/scripts/generateDistignore.js --exclude=vendor",
     "wp-env": "wp-env"
   },
   "devDependencies": {
