--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,10 @@
   ],
   "require": {
     "php": "^8.2",
+    "composer/installers": "^2.3",
     "snicco/better-wp-cli": "^1.2",
-    "sniccowp/php-scoper-wordpress-excludes": "dev-master",
-    "srwiez/thumbhash": "dev-master"
+    "sniccowp/php-scoper-wordpress-excludes": "^6.6",
+    "srwiez/thumbhash": "^1.3"
   },
   "extra": {
     "patch-scoped": {
@@ -26,13 +27,14 @@
     }
   },
   "require-dev": {
-    "ergebnis/composer-normalize": "dev-main",
-    "friendsofphp/php-cs-fixer": "dev-master",
-    "snicco/better-wp-cli-testing": "dev-master",
-    "symfony/var-dumper": "7.2.x-dev",
-    "yoast/wp-test-utils": "^1.0@dev"
+    "ergebnis/composer-normalize": "^2.44",
+    "friendsofphp/php-cs-fixer": "^3.64",
+    "snicco/better-wp-cli-testing": "^1.10",
+    "symfony/var-dumper": "^7.1",
+    "yoast/wp-test-utils": "^1.2"
   },
   "minimum-stability": "dev",
+  "prefer-stable": true,
   "autoload": {
     "psr-4": {
       "Hirasso\\WP\\Placeholders\\": "src/"
@@ -46,6 +48,7 @@
   },
   "config": {
     "allow-plugins": {
+      "composer/installers": true,
       "ergebnis/composer-normalize": true
     },
     "optimize-autoloader": true,
