--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   ],
   "require": {
     "php": "^8.2",
-    "composer/installers": "^2.3",
+    "composer/installers": "^1.12 || ^2.0",
     "snicco/better-wp-cli": "^1.2",
     "sniccowp/php-scoper-wordpress-excludes": "^6.6",
     "srwiez/thumbhash": "^1.3"
@@ -47,8 +47,8 @@
   },
   "config": {
     "allow-plugins": {
-      "composer/installers": true,
-      "ergebnis/composer-normalize": true
+      "ergebnis/composer-normalize": true,
+      "composer/installers": true
     },
     "optimize-autoloader": true,
     "preferred-install": "dist",
